# browserfreak

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
src/browserfreak/: __init__.py  agent_ui.py  anthropic_client.py  browser_agent.py  browser_manager.py  cli.py  config.py  decision_engine.py  exceptions.py  logging_config.py  security.py  server.py  tools.py
src/tests/: __init__.py  test_integration.py
